# linux_dirvers

./: README.md  notebooks.md
001_charderivers/: Makefile  hello.c
002-1cmake-select/: CMakeLists.txt  main.cpp
002-2select-network/: CMakeLists.txt  select-cli  select-cli.cpp  select-ser  select-ser.cpp
002_led/: .gtq_led.ko.cmd  .gtq_led.mod.o.cmd  .gtq_led.o.cmd  Makefile  gtq_led.c  gtq_led.ko  gtq_led.mod.c  modules.order
003_newchrbase/: .newchrled.ko.cmd  .newchrled.mod.o.cmd  .newchrled.o.cmd  CMakeLists.txt  Makefile  modules.order  new_chrdev.c  newchrled.ko  newchrled.mod.c
02_led/: .led.ko.cmd  .led.mod.o.cmd  .led.o.cmd  Makefile  modules.order
04_led_drv_template_bus_dev_drv/: .board_A_led.ko.cmd  .board_A_led.mod.o.cmd  .board_A_led.o.cmd  .chip_demo_gpio.ko.cmd  .chip_demo_gpio.mod.o.cmd  .chip_demo_gpio.o.cmd  .leddrv.ko.cmd  .leddrv.mod.o.cmd  .leddrv.o.cmd  Makefile  Module.symvers  board_A_led.ko  board_A_led.mod.c  chip_demo_gpio.ko  chip_demo_gpio.mod.c  leddrv.ko  leddrv.mod.c  ledtest  modules.order
04_led_drv_template_bus_dev_drv_unfinished/: .built-in.o.cmd  .leddrv.o.cmd  Makefile
06_beep/: .beep.ko.cmd  .beep.mod.o.cmd  .beep.o.cmd  Makefile  beep.c  beep.ko  beep.mod.c  beepApp.c  modules.order
06gtq_beef/: .06gtq_beef.ko.cmd  .06gtq_beef.mod.o.cmd  .06gtq_beef.o.cmd  06gtq_beef.c  06gtq_beef.ko  06gtq_beef.mod.c  Makefile  beepAPP  beepAPP.c  linux-gnueabihf-gcc  modules.order
11key/: .gtq-key.ko.cmd  .gtq-key.mod.o.cmd  .gtq-key.o.cmd  Makefile  gtq-key.c  gtq-key.ko  gtq-key.mod.c  gtq-keyAPP  gtq-keyAPP.c  modules.order
(+111 files in other folders)
